@@ -1,3 +1,8 @@
+2009-07-21  Sanel <karijes@users.sourceforge.net>
+
+	* src/FontChooser.cpp: cosmetic changes
+	* doc/Doxyfile.in: examples directory is part of EXAMPLES_PATH
+
 2009-06-09  Sanel <karijes@users.sourceforge.net>
 
 	* src/IconLoader.cpp: lookup cache not only by icon name, but by size too;
